[MOSIP-33316] (#62)
Signed-off-by: JanardhanBS-SyncByte <janjonny@gmail.com>
Co-authored-by: JanardhanBS-SyncByte <janjonny@gmail.com>